--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
-<body>q
+<body>
 
   <header>
     <h1 class="logo">Fruit Factory</h1>
